--- a/develop-problem-C/PaperC/sections/01_intro.tex
+++ b/develop-problem-C/PaperC/sections/01_intro.tex
@@ -31,3 +31,10 @@ We address five interconnected questions (MCM Problem C Tasks):
 \subsection{Paper Organization}
 
 \secref{sec:assumptions}: Assumptions; \secref{sec:notations}: Notations; \secref{sec:model1}: Fan Vote Inversion; \secref{sec:model2}: Survival Analysis; \secref{sec:model3}: Mechanism Design; \secref{sec:sensitivity}: Sensitivity; \secref{sec:evaluation}: Evaluation; \secref{sec:conclusion}: Conclusions.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.95\textwidth]{figures/fig_dwts_flowchart.jpeg}
+    \caption{Overview of our analytical framework for DWTS fan vote inference and mechanism design.}
+    \label{fig:flowchart}
+\end{figure}
