--- a/develop-problem-C/PaperC/sections/05_model2.tex
+++ b/develop-problem-C/PaperC/sections/05_model2.tex
@@ -37,6 +37,13 @@ where $\mathrm{HR}_k = \exp(\beta_k)$ is the hazard ratio ($>1$: higher risk; $<
     \end{threeparttable}
 \end{table}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.75\textwidth]{figures/fig_forest_plot.jpg}
+    \caption{Forest plot of hazard ratios from Cox proportional hazards model. Values $<1$ indicate protective effects (longer survival).}
+    \label{fig:forest_plot}
+\end{figure}
+
 \noindent\textbf{Quantifying Pro Dancer Effect:} We assess professional partner impact via two complementary metrics:
 \begin{itemize}[itemsep=0.1em]
     \item \textbf{Likelihood Ratio Test:} $\chi^2 = 2(\mathcal{L}_{\text{stratified}} - \mathcal{L}_{\text{unstratified}}) = 47.3$ with $df = 23$ (number of unique pros), $p < 0.001$.
