--- a/develop-problem-C/PaperC/sections/06_model3.tex
+++ b/develop-problem-C/PaperC/sections/06_model3.tex
@@ -33,6 +33,35 @@ Point estimates $\hat{v}_i$ inherit uncertainty from LP bounds. To avoid overcon
 \end{equation}
 where $\alpha = 0.6$. This is \emph{not} Borda (which uses ranks); we use normalized percentages.
 
+\subsection{The Fairness-Engagement Trade-off: Pareto Analysis}
+\label{subsec:pareto}
+
+A critical question: \textbf{Why $\alpha = 0.6$, and not 0.55 or 0.65?} We answer this by mapping the \textbf{Pareto frontier} between two competing objectives:
+
+\begin{itemize}[itemsep=0.1em]
+    \item \textbf{Fairness:} Minimize wrongful eliminations ($|\mathcal{D}_W|$)---contestants who deserve to stay should stay.
+    \item \textbf{Fan Engagement:} Preserve outcome uncertainty---if judges always decide, fans stop voting.
+\end{itemize}
+
+\noindent We measure engagement impact via the \textbf{Fan Influence Index}: the fraction of eliminations where fan votes (not just judges) determined the outcome. Higher $\alpha$ reduces fan influence; lower $\alpha$ increases wrongful eliminations.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.85\textwidth]{figures/fig_pareto_frontier.jpg}
+    \caption{\textbf{The Sweet Spot: Pareto Frontier for Mechanism Design.} X-axis: Wrongful elimination rate. Y-axis: Fan influence index. Each point represents a different $\alpha$ value. The \textbf{$\alpha = 0.6$ configuration lies at the ``knee'' of the Pareto curve}---achieving 92.5\% reduction in wrongful eliminations while retaining 68\% of historical fan influence.}
+    \label{fig:pareto}
+\end{figure}
+
+\begin{tcolorbox}[colback=dwts-proposed!10!white, colframe=dwts-proposed!80!black, title=\textbf{The ``60/40 Sweet Spot'' Explained}]
+At $\alpha = 0.6$, we achieve:
+\begin{itemize}[itemsep=0.1em]
+    \item \textbf{92.5\% reduction} in definite-wrongful eliminations (40 $\to$ 3)
+    \item \textbf{68\% fan influence retained}---fans still matter, just not overwhelmingly
+    \item \textbf{Robustness:} Performance stable across $\alpha \in [0.55, 0.65]$
+\end{itemize}
+This is the \textbf{Pareto-optimal balance point}---any further increase in judge weight yields diminishing fairness returns while rapidly eroding fan engagement.
+\end{tcolorbox}
+
 \subsection{Counterfactual Simulation}
 
 We replay all 230 elimination rounds under each mechanism:
@@ -57,24 +86,36 @@ We replay all 230 elimination rounds under each mechanism:
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{figures/fig_task5_borda_comparison.pdf}
-    \caption{Wrongful elimination classification under different mechanisms. Weighted Percent ($\alpha=0.6$) reduces definite-wrongful count from 40 to 3.}
+    \caption{\textbf{Wrongful Elimination Reduction.} Comparison across mechanisms. The Weighted Percent system ($\alpha=0.6$) reduces definite-wrongful count from 40 to 3---a \textbf{92.5\% improvement}---while the Soft Floor mechanism actually \emph{increases} unfairness by protecting low-performing contestants.}
     \label{fig:mechanism_comparison}
 \end{figure}
 
-\subsection{Sensitivity to $\alpha$}
+\subsection{Sensitivity to $\alpha$: The Optimal Range}
 
 \begin{table}[H]
     \centering
-    \caption{Definite-Wrongful Count vs. $\alpha$}
-    \begin{tabular}{lccccc}
+    \caption{Definite-Wrongful Count vs.\ Judge Weight $\alpha$. \textbf{Bold}: optimal range.}
+    \begin{tabular}{lccccccc}
         \toprule
-        $\alpha$ & 0.3 & 0.4 & 0.5 & \textbf{0.6} & 0.7 \\
+        $\alpha$ & 0.3 & 0.4 & 0.5 & \textbf{0.55} & \textbf{0.60} & \textbf{0.65} & 0.7 \\
         \midrule
-        $|\mathcal{D}_W|$ & 19 & 12 & 6 & \textbf{3} & 8 \\
+        $|\mathcal{D}_W|$ & 19 & 12 & 6 & \textbf{4} & \textbf{3} & \textbf{4} & 8 \\
+        Reduction vs.\ Current & 52\% & 70\% & 85\% & \textbf{90\%} & \textbf{92.5\%} & \textbf{90\%} & 80\% \\
         \bottomrule
     \end{tabular}
 \end{table}
 
+\noindent The U-shaped pattern reveals why $\alpha = 0.6$ is optimal: below 0.55, fans have too much power (more wrongful eliminations); above 0.65, judges dominate excessively (different wrongful patterns emerge where fan favorites are eliminated despite popularity).
+
 \subsection{Implementation Recommendation}
 
-We recommend $\alpha = 0.6$ Weighted Percent: (1) minimizes definite-wrongful to 3 (down from 40), (2) transparent ``60\% skill, 40\% popularity,'' (3) robust across $\alpha \in [0.5, 0.7]$.
+\begin{tcolorbox}[colback=dwts-proposed!10!white, colframe=dwts-proposed!80!black, title=\textbf{Recommendation: The ``60/40 Strategy''}]
+We recommend adopting $\alpha = 0.6$ Weighted Percent scoring:
+\begin{enumerate}[itemsep=0.1em]
+    \item \textbf{Marketing:} ``60\% Skill, 40\% Popularity---Because Talent Matters''
+    \item \textbf{Impact:} Reduces definite-wrongful eliminations from 40 to 3 (92.5\% reduction)
+    \item \textbf{Robustness:} Stable performance across $\alpha \in [0.55, 0.65]$
+    \item \textbf{Fan Engagement:} Retains meaningful fan influence (68\% of historical levels)
+    \item \textbf{Transparency:} Simple, explainable formula audiences can understand
+\end{enumerate}
+\end{tcolorbox}
