--- a/develop-problem-C/PaperC/sections/memo.tex
+++ b/develop-problem-C/PaperC/sections/memo.tex
@@ -4,7 +4,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-\Large\textbf{MEMORANDUM}
+\Large\textbf{AUDIT MEMORANDUM}
 \end{center}
 
 \vspace{0.5em}
@@ -12,73 +12,62 @@
 \vspace{0.3em}
 
 \begin{tabular}{@{}ll}
-\textbf{TO:}      & Director of Programming, \emph{Dancing with the Stars} \\
-\textbf{FROM:}    & Team \#2617892, Data Analytics Consultants \\
-\textbf{DATE:}    & January 26, 2026 \\
-\textbf{SUBJECT:} & \textbf{Voting System Audit \& Fairness Enhancement Recommendations}
+\textbf{TO:}      & Executive Producer, \emph{Dancing with the Stars} \\
+\textbf{FROM:}    & Team \#2617892 --- Modeling \& Audit Unit \\
+\textbf{DATE:}    & January 30, 2026 \\
+\textbf{SUBJECT:} & \textbf{Transparency Risks \& Rule Recommendations}
 \end{tabular}
 
 \vspace{0.3em}
 \noindent\rule{\textwidth}{1.5pt}
 \vspace{0.8em}
 
-\subsection*{Bottom Line Up Front}
+\subsection*{Executive Summary}
 
-\textbf{Your current voting system has a transparency problem.} Our independent audit found that Seasons 32 and 33 contain elimination outcomes that cannot be fully explained by the stated scoring rules---what we call \textbf{``Mismatch Events.''}  Additionally, the Bobby Bones controversy (Season 27) demonstrates how the current 50/50 split allows contestants with dedicated fan bases to survive despite consistently low judge scores. \textbf{We recommend adopting a ``60/40 Strategy''} that rebalances judge expertise with fan engagement.
+We conducted an independent audit of DWTS elimination outcomes across all 34 US seasons. Our analysis addresses a fundamental question: \textbf{Can the show's published scoring rules explain the observed eliminations without ever observing individual fan vote shares?}
 
-\subsection*{What We Did}
+For 32 of 34 seasons, the answer is \textbf{yes}---our mathematical model finds feasible fan vote distributions consistent with all outcomes. For \textbf{Seasons 32--33}, however, structural mismatches exist: no feasible vote assignment can fully reproduce the observed eliminations under stated rules.
 
-We built an automated \textbf{Consistency Checker}---think of it as a ``lie detector'' for elimination outcomes. For each episode across all 34 seasons, our system asks: \emph{``Given the judge scores and who got eliminated, is there any possible fan vote distribution that would produce this result under the stated rules?''}
+\subsection*{Key Finding (Audit Perspective)}
 
-\begin{itemize}[itemsep=0.1em]
-    \item \textbf{For Seasons 1--31:} Every single elimination checks out. The math works.
-    \item \textbf{For Seasons 32--33:} We found ``red flag'' episodes where \emph{no} fan vote distribution can explain the elimination under the published rules.
-\end{itemize}
+Beginning in S28, the Judges' Save introduces a layer of \textbf{decision opacity}: the broadcasted ``bottom-two'' procedure is rule-driven, but the final elimination depends on qualitative criteria not disclosed in a verifiable form. This does not imply wrongdoing; however, it \textbf{raises audit risk} by making certain outcomes \textbf{non-reproducible} under a purely rule-based model.
 
-\noindent This doesn't mean anyone cheated---it means either (a) the rules changed in ways not publicly documented, or (b) the Judges' Save decisions introduced unpredictable factors the audience doesn't understand.
-
-\subsection*{Three Key Findings}
+\subsection*{Three Principal Findings}
 
 \begin{enumerate}[itemsep=0.2em]
-    \item \textbf{System Anomalies Detected in Recent Seasons.} \\
-    Seasons 32 and 33 triggered our mismatch detector. Likely cause: the Judges' Save rule (introduced S28) operates on subjective criteria---``improvement,'' ``artistry''---that aren't captured by score-based logic. \textit{Recommendation: Publicly clarify save criteria to reduce perceived arbitrariness.}
+    \item \textbf{Model--Data Mismatch in Recent Seasons.} \\
+    Seasons 32 and 33 exhibit positive slack ($S^* > 0$) in our optimization framework, indicating outcomes that cannot be explained by feasible vote assignments under documented rules. Likely cause: the Judges' Save criterion operates on undisclosed factors (``improvement,'' ``artistry'') not captured by score-based logic. \textit{Implication: Audit trail is incomplete for these seasons.}
     
-    \item \textbf{The Bobby Bones Problem is Real.} \\
-    In Season 27, Bobby Bones won despite averaging 5+ points below his competitors. Our analysis shows the current system \emph{structurally} allows this: a contestant needs only 25--30\% of fan votes to survive if they have even moderate judge scores. The 50/50 split gives outsized power to mobilized fan bases. \textit{Recommendation: Rebalance to protect competitive integrity.}
+    \item \textbf{Structural Vulnerability to Fan-Base Mobilization.} \\
+    The current 50/50 judge--fan split allows contestants with mobilized fan bases to survive despite low technical scores. Season 27 (Bobby Bones) exemplifies this: our inferred vote intervals show a contestant can advance with approximately 25--30\% fan support if competitors' votes are fragmented. \textit{Implication: Competitive integrity risk exists under current mechanism.}
     
-    \item \textbf{40 ``Unfair'' Eliminations Could Have Been Prevented.} \\
-    We identified 40 historical eliminations where the sent-home contestant had \emph{both} above-average judge scores \emph{and} above-average estimated fan support. A simple rule change would have reduced this to just 3 cases.
+    \item \textbf{40 Definite-Wrongful Eliminations Identified.} \\
+    Using interval-robust classification, we identified 40 historical eliminations where the eliminated contestant had \emph{both} above-median judge scores \emph{and} above-median estimated fan support across all feasible vote assignments. A mechanism adjustment would reduce this to \textbf{3} cases.
 \end{enumerate}
 
-\subsection*{Our Recommendation: The ``60/40 Strategy''}
+\subsection*{Recommendation: Weighted Percent Mechanism}
 
-We propose a \textbf{Weighted Scoring System}: \textbf{60\% judges, 40\% fans.}
+To improve transparency without sacrificing engagement, we recommend:
 
 \begin{itemize}[itemsep=0.1em]
-    \item \textbf{Marketing Angle:} ``60\% skill, 40\% popularity---because talent should matter.''
-    \item \textbf{Impact:} Reduces ``unfair'' eliminations from 40 to just 3 across all seasons.
-    \item \textbf{Flexibility:} Works across the range of 55--65\% judge weight; 60\% is the sweet spot.
-    \item \textbf{Fan Engagement:} Still keeps fans invested---their votes matter, just not overwhelmingly.
+    \item \textbf{Adopt a 60/40 weighting:} $0.6 \times \text{JudgePct} + 0.4 \times \text{FanPct}$
+    \item \textbf{Impact:} Reduces Definite-Wrongful eliminations from 40 to 3 ($-92.5\%$)
+    \item \textbf{Robustness:} Performance stable across $\alpha \in [0.55, 0.65]$ (Pareto knee)
+    \item \textbf{Fan engagement preserved:} 68\% of historical fan influence retained
 \end{itemize}
 
-\subsection*{Operational Tools We Can Provide}
+\noindent Additionally, consider reporting minimal verifiable information (e.g., bottom-two composition) to improve audit trail completeness.
 
-\begin{enumerate}[itemsep=0.1em]
-    \item \textbf{Pre-Broadcast Checker:} Run before results air (under 5 seconds). Flags episodes that might generate controversy.
-    \item \textbf{Media Q\&A Prep:} For flagged episodes, generates talking points explaining why an ``upset'' outcome is mathematically possible.
-    \item \textbf{Season-End Report:} Summarizes voting patterns and anomaly rates for internal review.
-\end{enumerate}
-
-\subsection*{Important Caveats}
+\subsection*{Scope \& Limitations}
 
 \begin{itemize}[itemsep=0.1em]
-    \item We never see actual vote counts---our analysis produces \emph{possible ranges}, not exact numbers.
-    \item Mismatch events signal rule complexity, \textbf{not} manipulation.
-    \item Post-Season 27 rule details are inferred; official documentation may differ.
+    \item We never observe actual vote counts---our analysis produces \emph{feasible intervals}, not exact values.
+    \item Mismatch events signal \textbf{model--data discrepancy}, not manipulation.
+    \item Post-S27 rule details are inferred from problem statement; official documentation may differ.
 \end{itemize}
 
 \vspace{0.8em}
-\hfill\textbf{--- Team \#2617892}
+\hfill\textbf{--- Team \#2617892, Modeling \& Audit Unit}
 
 \vspace{0.3em}
-\hfill\textit{Full technical details in attached report.}
+\hfill\textit{Full technical methodology in attached report.}
